dirty: Implement changes for the merge

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,7 @@ xfail_strict=true
 log_format = %(levelname)8s  %(asctime)s  %(filename)20s  %(message)s
 log_date_format = %m-%d %H:%M:%S
 timeout = 300
+asyncio_mode=auto
 
 [pytest-watch]
 runner= pytest --failed-first --maxfail=1
